Fix overflow on big images

--- a/modules/contentbox/modules/contentbox-admin/modules/contentbox-filebrowser/includes/css/src/main.css
+++ b/modules/contentbox/modules/contentbox-admin/modules/contentbox-filebrowser/includes/css/src/main.css
@@ -123,8 +123,9 @@
 	display: block;;
 	max-width: 800px;
 	max-height: 600px;
-	width: auto;
+	width: 500px;
 	height: auto;
+	overflow: hidden;
 }
 a{
     cursor: pointer;
